--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="header">
-        <div id="logo-div"><img src="/img/googlelogo.png" alt="Google logo" id="logo"></div>
+        <div id="logo-div"><img src="img/googlelogo.png" alt="Google logo" id="logo"></div>
         <div id="search-bar">
             <div id="input">
                 <input type="text" id="search" value="build this webpage">
